hphp/test/slow/iterator/iterator_to_array.php.expectf
dict(3) {
  [0]=>
  int(1)
  [1]=>
  int(2)
  [2]=>
  int(3)
}
dict(3) {
  [0]=>
  int(1)
  [1]=>
  int(2)
  [2]=>
  int(3)
}

Catchable fatal error: Argument must implement interface Traversable in %s/test/slow/iterator/iterator_to_array.php on line 11